--- a/scout/templates/scout/index.html
+++ b/scout/templates/scout/index.html
@@ -2,7 +2,7 @@
 {% block title %}Home{% endblock %}
 
 {% block body %}
-    <div class="my-3 p-3 bg-body rounded shadow-sm">
+    <div class="my-3 p-3 bg-light rounded shadow-sm">
       <h2>Latest</h2>
       <small class="d-block text-end border-bottom ">
           <a href="{% url 'latest' %}">More</a>
@@ -15,7 +15,7 @@
 
     </div>
 
-  <div class="my-3 p-3 bg-body rounded shadow-sm">
+  <div class="my-3 p-3 bg-light rounded shadow-sm">
     <h2>Popular</h2>
           <small class="d-block text-end border-bottom ">
           <a href="{% url 'popular' %}">More</a>
