--- a/scout/templates/scout/my_activities.html
+++ b/scout/templates/scout/my_activities.html
@@ -2,7 +2,7 @@
 {% block title %}My activities{% endblock %}
 
 {% block body %}
-    <div class="my-3 p-3 bg-body rounded shadow-sm">
+    <div class="my-3 p-3 bg-light rounded shadow-sm">
       <h2 class="border-bottom pb-2 mb-0">My activities</h2>
       <div class="container">
         {% if my_activities %}
