--- a/scout/templates/scout/activity-card-small.html
+++ b/scout/templates/scout/activity-card-small.html
@@ -1,10 +1,10 @@
 <!-- activity card small -->
-<div class="d-flex text-body-secondary pt-3">
+<div class="d-flex bg-body border-bottom rounded shadow-sm text-body-secondary my-2 p-4">
     <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false">
         <rect class="{{ activity.age_range|first|lower}}" width="100%" height="100%" fill="#007bff"/>
         <text x="50%" y="50%" fill="#ffffff" dy=".3em">{{ activity.age_range|first|upper}}</text>
     </svg>
-    <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
+    <div class="pb-3 mb-0 small lh-sm w-100">
     <div class="d-flex justify-content-between">
         <strong class="text-gray-dark">{{ activity.title }}</strong>
         <a href="/activities/{{activity.id}}">activity details</a>
