--- a/scout/templates/scout/activity-card.html
+++ b/scout/templates/scout/activity-card.html
@@ -1,5 +1,5 @@
 <!-- activity card -->
-<div class="row py-3 border-bottom">
+<div class="row my-2 p-4 bg-body rounded shadow-sm border-bottom">
     <div class="col-12 d-flex">
     <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false">
         <rect class="{{ activity.age_range|first|lower}}" width="100%" height="100%" fill="#007bff"/>
