--- a/scout/templates/scout/category.html
+++ b/scout/templates/scout/category.html
@@ -2,7 +2,7 @@
 {% block title %}{{ category|capfirst }}{% endblock %}
 
 {% block body %}
-    <div class="my-3 p-3 bg-body rounded shadow-sm">
+    <div class="my-3 p-3 bg-light rounded shadow-sm">
       <h2 class="border-bottom pb-2 mb-0">{{ category|capfirst }}</h2>
       <div class="container">
         {% if activities.object_list %}
@@ -14,20 +14,20 @@
         {% endif %}
       </div>
     </div>
-    <div class="my-3 p-3 bg-body">
+    {% if activities.has_other_pages %}
+    <div class="my-3 p-3 bg-light">
       <div class="container">
-      {% if activities.has_other_pages %}
-      <nav aria-label="Page navigation example">
-          <ul class="pagination">
-              {% if activities.has_previous %}
-                  <li class="page-item"><a class="page-link" href="?page={{ activities.previous_page_number }}"><span aria-hidden="true">&laquo;</span> Previous</a></li>
-              {% endif %}
-              {% if activities.has_next %}
-              <li class="page-item"><a class="page-link" href="?page={{ activities.next_page_number }}">Next <span aria-hidden="true">&raquo;</span></a></li>
-              {% endif %}
-          </ul>
-      </nav>
-      {% endif %}
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                {% if activities.has_previous %}
+                    <li class="page-item"><a class="page-link" href="?page={{ activities.previous_page_number }}"><span aria-hidden="true">&laquo;</span> Previous</a></li>
+                {% endif %}
+                {% if activities.has_next %}
+                <li class="page-item"><a class="page-link" href="?page={{ activities.next_page_number }}">Next <span aria-hidden="true">&raquo;</span></a></li>
+                {% endif %}
+            </ul>
+          </nav>
       </div>
     </div>
+    {% endif %}
 {% endblock %}
