--- a/scout/templates/scout/tags.html
+++ b/scout/templates/scout/tags.html
@@ -2,9 +2,9 @@
 {% block title %}Tags{% endblock %}
 
 {% block body %}
-    <div class="my-3 p-3 bg-body rounded shadow-sm">
-      <h2 class="border-bottom pb-2 mb-0">All Tags</h2>
-      <div class="container">
+    <div class="mb-3 p-3 bg-light rounded shadow-sm">
+      <h2 class="border-bottom pb-2">All Tags</h2>
+      <div class="container bg-body">
         <div class="row p-4">
           {% for key, value in tags %}
             <div class="col-sm-6 col-lg-4 my-2">
