--- a/scout/templates/scout/login.html
+++ b/scout/templates/scout/login.html
@@ -81,17 +81,17 @@ body {
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
     <div class="form-floating">
-      <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com">
-      <label for="floatingInput">Email address</label>
+      <input type="text" class="form-control" id="username" name="username" placeholder="Username">
+      <label for="floatingInput">Username:</label>
     </div>
     <div class="form-floating">
       <input type="password" class="form-control" id="password" name="password" placeholder="Password">
-      <label for="floatingPassword">Password</label>
+      <label for="floatingPassword">Password:</label>
     </div>
 
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
     <p class="mt-2 mb-3 text-muted">Don't have an account? <a href="{% url 'register' %}">Register here.</a></p>
-    <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+    <p class="mt-5 mb-3 text-muted">Let's Scout</p>
   </form>
   {% if message %}
   <div class="alert alert-danger alert-dismissible fade show" role="alert">
