--- a/scout/templates/scout/login.html
+++ b/scout/templates/scout/login.html
@@ -59,6 +59,12 @@ body {
   z-index: 2;
 }
 
+.form-signin input[type="text"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
 .form-signin input[type="email"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
@@ -81,11 +87,11 @@ body {
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
     <div class="form-floating">
-      <input type="text" class="form-control" id="username" name="username" placeholder="Username">
+      <input type="text" class="form-control" id="username" name="username" placeholder="Username" required>
       <label for="floatingInput">Username:</label>
     </div>
     <div class="form-floating">
-      <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+      <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
       <label for="floatingPassword">Password:</label>
     </div>
 
