--- a/scout/templates/scout/register.html
+++ b/scout/templates/scout/register.html
@@ -59,13 +59,26 @@ body {
   z-index: 2;
 }
 
+.form-signin input[type="text"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
 .form-signin input[type="email"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
 
-.form-signin input[type="password"] {
+.form-signin input[name="password"] {
+  margin-top: 10px;
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.form-signin input[name="confirmation"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
@@ -78,25 +91,35 @@ body {
 <main class="form-signin">
   <form action="{% url 'register' %}" method="post">
         {% csrf_token %}
-    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+    <h1 class="h3 mb-3 fw-normal">Register</h1>
 
     <div class="form-floating">
-      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-      <label for="floatingInput">Email address</label>
+      <input type="text" class="form-control" id="username" name="username" placeholder="username" required>
+      <label for="username">Username:</label>
     </div>
     <div class="form-floating">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-      <label for="floatingPassword">Password</label>
+      <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com" required>
+      <label for="email">Email address:</label>
+    </div>
+    <div class="form-floating">
+      <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
+      <label for="password">Password:</label>
+    </div>
+    <div class="form-floating">
+      <input type="password" class="form-control" id="confirmation" name="confirmation" placeholder="Repeat password" required>
+      <label for="confirmation">Repeat password:</label>
     </div>
 
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-    <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+    <button class="w-100 btn btn-lg btn-success" type="submit">Register</button>
+    <p class="mt-2 mb-3 text-muted">Already have an account? <a href="{% url 'login' %}">Log in here.</a></p>
+    <p class="mt-5 mb-3 text-muted">Let's Scout</p>
   </form>
+  {% if message %}
+  <div class="alert alert-danger alert-dismissible fade show" role="alert">
+    {{message}}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+  {% endif %}
 </main>
 
 
