complete educational_goals list and update readme file

--- a/scout/templates/scout/sidebar.html
+++ b/scout/templates/scout/sidebar.html
@@ -12,6 +12,7 @@
                     <a href="{% url 'category' category='lupetti' %}">
                         Lupetti
                     </a>
+                    <small class="text-muted">(8-11 years)</small>
                 </li>
                 <li class="mb-2">
                     <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false">
@@ -22,6 +23,7 @@
                     <a href="{% url 'category' category='esploratori' %}">
                         Esploratori
                     </a>
+                    <small class="text-muted">(12-15 years)</small>
                 </li>
                 <li class="mb-2">
                     <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false">
@@ -32,6 +34,7 @@
                     <a href="{% url 'category' category='rover' %}">
                         Rover
                     </a>
+                    <small class="text-muted">(16-19 years)</small>
                 </li>
             </ol>
         </div>
