show message for empty lists

--- a/scout/templates/scout/index.html
+++ b/scout/templates/scout/index.html
@@ -8,9 +8,13 @@
           <a href="{% url 'latest' %}">More</a>
       </small>
       <div class="container">
-        {% for activity in latest_activities %}
-          {% include "scout/activity-card.html" %}
-        {% endfor %}
+        {% if latest_activities %}
+          {% for activity in latest_activities %}
+            {% include "scout/activity-card.html" %}
+          {% endfor %}
+        {% else %}
+          <p class="p-2">Nothing to show yet.</p>
+        {% endif %}
       </div>
 
     </div>
@@ -21,9 +25,13 @@
           <a href="{% url 'popular' %}">More</a>
       </small>
       <div class="container">
-        {% for activity in popular_activities %}
-          {% include "scout/activity-card.html" %}
-        {% endfor %}
+        {% if popular_activities %}
+          {% for activity in popular_activities %}
+            {% include "scout/activity-card.html" %}
+          {% endfor %}
+        {% else %}
+          <p class="p-2">Nothing to show yet.</p>
+        {% endif %}
       </div>
   </div>
 {% endblock %}
