--- a/scout/templates/scout/my_activities.html
+++ b/scout/templates/scout/my_activities.html
@@ -10,7 +10,7 @@
             {% include "scout/activity-card-small.html" %}
           {% endfor %}
         {% else %}
-        <p class="p-2">Non hai ancora creato nessuna attivit&agrave;.</p>
+        <p class="p-2">Nothing to show yet.</p>
         {% endif %}
       </div>
     </div>
