--- a/scout/templates/scout/tag.html
+++ b/scout/templates/scout/tag.html
@@ -13,7 +13,7 @@
               {% include "scout/activity-card-small.html" %}
           {% endfor %}
         {% else %}
-          <p class="p-2">Nessuna attività disponibile per questo tag.</p>
+          <p class="p-2">Nothing to show yet.</p>
         {% endif %}
       </div>
     </div>
