--- a/scout/templates/scout/category.html
+++ b/scout/templates/scout/category.html
@@ -10,7 +10,7 @@
               {% include "scout/activity-card.html" %}
           {% endfor %}
         {% else %}
-          <p class="p-2">Nessuna attività disponibile per questa categoria.</p>
+          <p class="p-2">Nothing to show yet.</p>
         {% endif %}
       </div>
     </div>
